# target-bigquery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  meltano.yml  pyproject.toml  tach.toml  trello.out
.10x/decisions/: raise-python-floor-for-2026-dependency-security.md
.10x/evidence/: 2026-07-05-ci-skip-legacy-streaming-insert.md  2026-07-05-dependency-security-modernization.md  2026-07-05-generated-view-config-verification.md  2026-07-05-github-actions-pin-refresh.md  2026-07-05-github-zero-open-verification.md  2026-07-05-install-protobuf-stream-map-verification.md  2026-07-05-production-quality-live-bigquery-verification.md  2026-07-05-storage-write-nested-verification.md  2026-07-05-uv-packaging-conversion.md
.10x/research/: 2026-07-05-github-issue-pr-burn-down-context.md  2026-07-05-github-open-context.md
.10x/research/.storage/: 2026-07-05-open-issues.json  2026-07-05-open-prs.json
.10x/research/.storage/github-open-issues/: issue-101.json  issue-103.json  issue-104.json  issue-105.json  issue-107.json  issue-108.json  issue-109.json  issue-110.json  issue-111.json  issue-113.json  issue-124.json  issue-34.json  issue-39.json  issue-40.json  issue-71.json  issue-76.json  issue-93.json  issue-99.json
.10x/research/.storage/github-open-prs/: pr-116-files.txt  pr-116.json  pr-118-files.txt  pr-118.json  pr-125.json  pr-127-files.txt  pr-127.json  pr-23.json  pr-26.json  pr-29.json  pr-56.json  pr-58.json  pr-62.json
.10x/reviews/: 2026-07-05-production-quality-burn-down-review.md  2026-07-05-repository-modernization-review.md
.10x/specs/: github-issue-pr-burn-down.md  repository-quality-modernization.md
.10x/tickets/: 2026-07-05-github-issue-pr-burn-down-plan.md  2026-07-05-quality-procedure-completion-audit.md  2026-07-05-repository-modernization-plan.md  2026-07-05-uv-packaging-conversion.md
.10x/tickets/done/: 2026-07-05-ci-skip-legacy-streaming-insert.md  2026-07-05-dependency-security-modernization.md  2026-07-05-repository-modernization-plan.md  2026-07-05-uv-packaging-conversion.md
.changes/: 0.6.2.md  0.6.3.md  0.6.4.md  0.6.7.md  0.6.8.md  0.7.0.md  0.7.1.md
.github/: dependabot.yml
.github/workflows/: ci.yml
input/: tap-carbon-intensity.jsonl
target_bigquery/: batch_job.py  constants.py  core.py  gcs_stage.py  proto_gen.py  record.proto  record_pb2.py  schema.json  sinks.py  storage_write.py  streaming_insert.py  target.py  utils.py
target_bigquery/tests/: __init__.py  conftest.py  test_benchmarks.py  test_ci_skips.py  test_core.py  test_core_pure.py  test_properties.py  test_sync.py  test_target.py  test_utils.py  test_workers.py
