[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "z3-target-bigquery"
version = "0.7.2"
description = "z3-target-bigquery is a Singer target for BigQuery. It supports storage write, GCS, streaming, and batch load methods. Built with the Meltano SDK."
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = "MIT"
authors = [{ name = "Alex Butler", email = "butler.alex2010@gmail.com" }]
keywords = ["ELT", "BigQuery"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "google-cloud-bigquery[bqstorage]>=3.4.1,<4",
  "google-cloud-storage>=2.7.0,<3",
  "grpcio-status>=1.51.1,<2",
  "grpcio-tools>=1.51.1,<1.72",
  "orjson>=3.7.2,<4",
  "proto-plus>=1.22,<2",
  "protobuf>=4.21,<6",
  "setuptools>=67,<81",
  "singer-sdk>=0.22.0,<0.23.0",
  "tenacity>=8.0.1,<9",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.6",
  "mypy>=1.10",
  "pytest>=7.4",
  "pytest-randomly>=3.15",
  "pytest-timeout>=2.3",
  "pytest-xdist>=3.5",
  "ruff>=0.14",
  "tox>=4.20",
]

[project.urls]
Homepage = "https://github.com/z3z1ma/target-bigquery"
Repository = "https://github.com/z3z1ma/target-bigquery"

[project.scripts]
target-bigquery = "target_bigquery.target:TargetBigQuery.cli"

[tool.hatch.build.targets.wheel]
packages = ["target_bigquery"]
exclude = ["target_bigquery/tests"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  # Long generated SQL and JSONL fixtures are clearer when kept as literal expected strings.
  "E501",
  # Keep the first uv migration focused; existing type aliases still target Python 3.8.
  "UP006",
  "UP007",
  "UP045",
]

[tool.pytest.ini_options]
testpaths = ["target_bigquery/tests"]
